Revision history for Perl module Alien::Base.

0.042 2017-07-26 11:35:49 -0400
  - Production release identical to 0.041_02

0.041_02 2017-07-25 21:52:38 -0400
  - Migrate test suite over to Test2::V0
  - Remove dependency on Test::More

0.041_01 2017-07-25 20:10:58 -0400
  - Remove dependency on List::MoreUtils

0.040 2017-03-29 01:26:09 -0400
  - Split Alien::Build::ModuleBuild from Alien::Build